fix letter spacing for <pre>

--- a/css/style.css
+++ b/css/style.css
@@ -21,8 +21,11 @@ img.emoji {
 
 a:hover {text-decoration: none}
 
-.post-content  {
+.post-content {
     font-family: Merriweather, Georgia, Sans-serif;
+}
+
+.post-content, .post-content :not(pre) {
     letter-spacing: 0.01rem;
 }
 
